syntax="proto3";
package service;
option go_package="api;service";
option java_package="com.sunjet.rpc.api";

message HelloRequest{
  string name = 1;
}

message HelloResponse{
  string message=1;
}

service HelloService{
  rpc SayHello(HelloRequest) returns (HelloResponse);
}